--- a/app/views/cosmetics-general/inc_tables-checkbox-label-hint.html
+++ b/app/views/cosmetics-general/inc_tables-checkbox-label-hint.html
@@ -1,3 +1,3 @@
-<div class="govuk-hint govuk-checkboxes__hint govuk-!-font-size-16">
+<div class="govuk-hint govuk-checkboxes__hint govuk-!-font-size-16" id="npis-table-hint">
     The <abbr>NPIS</abbr> tables are included above<span class="govuk-visually-hidden">/before</span> this form.
 </div>
