Change on css for testing worflow

--- a/app/assets/sass/opss/_opss-msa.scss
+++ b/app/assets/sass/opss/_opss-msa.scss
@@ -2,7 +2,7 @@
 //Add the listed @import scss files (below) to your directory.
 //Don't edit your local copy to avoid it unsyncing with these versions.
 //We can remove linting from these scss files - they won't build if there is a real problem.
-
+//Change to trigger worflow. Delete this line
 @import "./opss-shared";
 @import "./opss-search";
 @import "./opss-pagination";
