--- a/app/views/psd-revised-flow/product-page-retired.html
+++ b/app/views/psd-revised-flow/product-page-retired.html
@@ -34,7 +34,7 @@ href: "#"
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
 
-            <!-- nothing here -->
+            <!-- nothing here ************************* -->
 
         </div>
     </div>
