new ingredient forms

--- a/app/views/cosmetics-general/inc_key-ingredients-form.html
+++ b/app/views/cosmetics-general/inc_key-ingredients-form.html
@@ -64,7 +64,7 @@
 <div class="govuk-form-group govuk-!-margin-bottom-7">
   <div class="govuk-checkboxes">
     <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="cas-1">What is the CAS
-      number?</label>
+      number? <span class="opss-secondary-text govuk-!-font-size-16">(optional)</span></label>
     <input class="govuk-input govuk-input--width-10" id="cas-1" name="cas-1" type="text">
   </div>
 </div>
