updates to the COS shades forms

--- a/app/assets/sass/opss/_opss-msa.scss
+++ b/app/assets/sass/opss/_opss-msa.scss
@@ -43,6 +43,7 @@
         //border-bottom: 1px solid govuk-colour("mid-grey");
 
         margin-bottom: govuk-spacing(2);
+
         @include govuk-media-query($from: tablet) {
             margin-bottom: 0;
         }
@@ -57,11 +58,11 @@
         li {
             padding: govuk-spacing(2) 0;
             position: relative;
-            float: left;//mobile
+            float: left; //mobile
             clear: left;
 
             &:first-child {
-                padding-top: 0;//mobile
+                padding-top: 0; //mobile
             }
 
             &::before {
@@ -131,17 +132,20 @@
         }
     }
 
-    & > .opss-std-row {
+    &>.opss-std-row {
         float: left;
     }
 
 }
-header.govuk-header + .govuk-width-container + .opss-std-row--borders {
+
+header.govuk-header+.govuk-width-container+.opss-std-row--borders {
     margin-top: -1px;
 }
-header.govuk-header + .opss-std-row.opss-std-row--borders {
+
+header.govuk-header+.opss-std-row.opss-std-row--borders {
     border-top: none;
 }
+
 //*** top nav & std rows ends ***
 
 .opss-minor-nav {
@@ -169,6 +173,7 @@ header.govuk-header + .opss-std-row.opss-std-row--borders {
         padding-left: govuk-spacing(1);
     }
 }
+
 .opss-list--right {
     text-align: right;
 }
@@ -179,7 +184,8 @@ header.govuk-header + .opss-std-row.opss-std-row--borders {
     }
 }
 
-.opss-font-size--reduced-s { /* inherited size - small amount reduced size*/
+.opss-font-size--reduced-s {
+    /* inherited size - small amount reduced size*/
     font-size: 92% !important;
 }
 
@@ -265,7 +271,7 @@ a.govuk-link.opss-link--no-hover:hover {
 */
 /* .opss-summary-list ends */
 
-.js-enabled .opss-accordian__open-remove > div:first-child {
+.js-enabled .opss-accordian__open-remove>div:first-child {
     @include govuk-visually-hidden;
 }
 
@@ -273,7 +279,9 @@ a.govuk-link.opss-link--no-hover:hover {
     .govuk-radios__conditional.govuk-form-group--error {
         border-left: 4px solid $govuk-error-colour;
     }
-    .govuk-radios__conditional.govuk-radios__conditional--hidden.govuk-form-group--error {//helps with smooth loading
+
+    .govuk-radios__conditional.govuk-radios__conditional--hidden.govuk-form-group--error {
+        //helps with smooth loading
         display: block !important;
     }
 }
@@ -281,11 +289,12 @@ a.govuk-link.opss-link--no-hover:hover {
 
 li.opss-task-sub {
     @include govuk-media-query($from: tablet) {
+
         /*h3 {@include opss-font-size($s: 19px, $l: 1.25); }*/
         /*li b {@include opss-font-size($s: 12px, $l: 0.9); }*/
         li span,
         .opss-button-link {
-            @include opss-font-size($s: 16px, $l: 1.5);//1.0
+            @include opss-font-size($s: 16px, $l: 1.5); //1.0
         }
 
         ul.opss-task-sub__list {
@@ -293,7 +302,7 @@ li.opss-task-sub {
 
             li {
                 border-top: none;
-                border-bottom-color: rgba(76, 115, 141, 0.3);//#b1b4b6
+                border-bottom-color: rgba(76, 115, 141, 0.3); //#b1b4b6
                 padding-top: 7px;
                 padding-bottom: 6px;
 
@@ -312,7 +321,7 @@ li.opss-task-sub {
         border-bottom: none;
         margin-bottom: - govuk-spacing(5) !important;
 
-        & > span {
+        &>span {
             width: auto;
             max-width: none;
             display: block;
@@ -329,28 +338,55 @@ li.opss-task-sub {
         display: inline-block;
         margin-left: govuk-spacing(1);
         margin-right: govuk-spacing(1);
-        color: rgba(76, 115, 141, 0.5);//#b1b4b6
+        color: rgba(76, 115, 141, 0.5); //#b1b4b6
     }
 }
 
-.app-task-list__section-number {//bug fix for mobile
+.app-task-list__section-number {
+    //bug fix for mobile
     display: inline-block;
     min-width: govuk-spacing(5);
 }
 
-@media only screen and (max-width: 859px) {//browser window is 859px wide or less
+.opss-input__wrapper--label div[class$="__prefix"] {
+    //convert prefix to label style
+    background-color: transparent;
+    border: none;
+    padding-left: 0;
+    min-width: auto;
+    line-height: 1.6;
+}
+
+@media only screen and (max-width: 859px) {
+
+    //browser window is 859px wide or less
     .opss-switch-cols {
         width: auto;
-        .govuk-grid-column-three-quarters.opss-switch-cols__left {width: 100%; }
-        .govuk-grid-column-one-quarter.opss-switch-cols__right {width: auto; padding-top: govuk-spacing(5) !important;
+
+        .govuk-grid-column-three-quarters.opss-switch-cols__left {
+            width: 100%;
+        }
+
+        .govuk-grid-column-one-quarter.opss-switch-cols__right {
+            width: auto;
+            padding-top: govuk-spacing(5) !important;
         }
     }
 }
-@media only screen and (min-width: 860px) {//browser window is 860px wide or more
+
+@media only screen and (min-width: 860px) {
+
+    //browser window is 860px wide or more
     .opss-switch-cols {
         display: flex;
-        .opss-switch-cols__left {order: 1; }
-        .opss-switch-cols__right {order: 2; }
+
+        .opss-switch-cols__left {
+            order: 1;
+        }
+
+        .opss-switch-cols__right {
+            order: 2;
+        }
     }
 }
 
@@ -367,7 +403,7 @@ li.opss-task-sub {
                 margin-right: govuk-spacing(1);
 
                 .govuk-label {
-                    @include opss-font-size($s: 16px, $l: 1.5);//1.0
+                    @include opss-font-size($s: 16px, $l: 1.5); //1.0
                 }
             }
         }
@@ -378,7 +414,7 @@ li.opss-task-sub {
             margin-right: govuk-spacing(1);
 
             .govuk-label {
-                @include opss-font-size($s: 16px, $l: 1.5);//1.0
+                @include opss-font-size($s: 16px, $l: 1.5); //1.0
             }
         }
     }
@@ -387,36 +423,53 @@ li.opss-task-sub {
 
 tbody.opss-table-grouped-by--1,
 tbody.opss-table-grouped-by--2 {
-    th, td {
+
+    th,
+    td {
         border-bottom: 1px solid $govuk-border-colour;
     }
-}/*thead + tbody.opss-table-grouped-by--1, */
-tbody.opss-table-grouped-by--2 + tbody.opss-table-grouped-by--1,
-tbody.opss-table-grouped-by--1 + tbody.opss-table-grouped-by--2,
-tbody.opss-table-grouped-by--1 + tbody.opss-table-grouped-by--none,
-tbody.opss-table-grouped-by--2 + tbody.opss-table-grouped-by--none {
+}
+
+/*thead + tbody.opss-table-grouped-by--1, */
+tbody.opss-table-grouped-by--2+tbody.opss-table-grouped-by--1,
+tbody.opss-table-grouped-by--1+tbody.opss-table-grouped-by--2,
+tbody.opss-table-grouped-by--1+tbody.opss-table-grouped-by--none,
+tbody.opss-table-grouped-by--2+tbody.opss-table-grouped-by--none {
     tr:first-child {
-        th, td {
-            border-top: 3px dashed  $govuk-text-colour;
+
+        th,
+        td {
+            border-top: 3px dashed $govuk-text-colour;
             position: relative;
-            top: -2px; /* avoids swapping top borders with bottom */
+            top: -2px;
+            /* avoids swapping top borders with bottom */
         }
     }
 }
 
 /*.opss-text-align-right > form > select {min-width: none; }*/
-select {min-width: 11.5em} /*localhost version not styling like new gds v?*/
+select {
+    min-width: 11.5em
+}
+
+/*localhost version not styling like new gds v?*/
 
 /* used on the search page - starts.  (Required for filters in left col on search pgs) */
 body.js-enabled .govuk-radios__conditional--hidden.opss-nojs-hide {
-    height: 0; overflow: hidden; float: left; margin: 0;
+    height: 0;
+    overflow: hidden;
+    float: left;
+    margin: 0;
 }
+
 body:not(.js-enabled) .govuk-radios__conditional--hidden.opss-nojs-hide {
     display: none;
 }
+
 body.js-enabled .govuk-radios__conditional.opss-nojs-hide {
     display: block;
 }
+
 /* used on the search page - ends */
 
 div[class*="radios--small"],
