--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-poison.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-poison.html
@@ -54,37 +54,27 @@ href: "/index"
             <input class="govuk-input" id="ingredient-5" name="ingredient-5" type="text" spellcheck="false">
           </div>
 
-          <div class="govuk-grid-row">
-            <div class="govuk-grid-column-one-half">
-
-              <div class="govuk-form-group">
-
-                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the
-                  exact concentration?</label>
-                <div class="govuk-input__wrapper">
-                  <input class="govuk-input govuk-input--width-3" id="concentrate-1" name="concentrate-1" type="text"
-                    maxlength="3">
-                  <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt;
-                      w/w</span></div>
-                </div>
-
-              </div>
-
-            </div>
-            <div class="govuk-grid-column-one-half">
-
-              <div class="govuk-form-group">
-
-                <div class="govuk-checkboxes opss-float-right-desktop">
-                  <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="cas-1">What is the CAS
-                    number?</label>
-                  <input class="govuk-input govuk-input--width-10" id="cas-1" name="cas-1" type="text">
-                </div>
-
-              </div>
-
-            </div>
+          <div class="govuk-form-group">
+            <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="cas-1">What is the CAS
+              number? <span class="govuk-!-font-size-16 opss-secondary-text">(optional)</span></label>
+            <input class="govuk-input govuk-input--width-10" id="cas-1" name="cas-1" type="text">
           </div>
+
+
+          <div class="govuk-form-group">
+
+            <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the
+              exact concentration?</label>
+            <div class="govuk-input__wrapper">
+              <input class="govuk-input govuk-input--width-3" id="concentrate-1" name="concentrate-1" type="text"
+                maxlength="3">
+              <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt;
+                  w/w</span></div>
+            </div>
+
+          </div>
+
+
 
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
